# loc-man-server

./: .gitignore  Application.hs  Foundation.hs  LICENSE  Main.hs  Model.hs  loc-man-server.cabal  websockets.html
Handler/: Home.hs  WebSocket.hs
LocMan/: Conduit.hs  Types.hs
LocMan/STM/: Types.hs
Locman/: Types.hs  WebSockets.hs
Locman/Conduit/: WebSockets.hs
config/: models  routes  settings.yml.example  test-settings.yml
loc-man-lib-sync/: loc-man-lib-sync.cabal  stack.yaml
loc-man-lib-sync/src/LocMan/: Model.hs
loc-man-lib-ws/: loc-man-lib-ws.cabal  stack.yaml
loc-man-lib-ws/src/LocMan/: Types.hs  WebSockets.hs
loc-man-lib-ws/src/LocMan/Conduit/: Common.hs  WebSockets.hs
loc-man-server/: .gitignore  Application.hs  Main.hs  Model.hs  Settings.hs  loc-man-server.cabal  stack.yaml  websockets.html
loc-man-server-ws/: loc-man-server-ws.cabal  stack.yaml
loc-man-server-ws/src/: Main.hs
loc-man-server/Handler/: Home.hs  Users.hs  WebSocket.hs
loc-man-server/LocMan/: Conduit.hs  Types.hs
loc-man-server/Locman/: Conduit.hs  WebSockets.hs
loc-man-server/Locman/Conduit/: WebSockets.hs
loc-man-server/app/: devel.hs
loc-man-server/config/: keter.yml  routes  test-settings.yml
test/Handler/: WebSocketSpec.hs
