name:                loc-man-lib-sync
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/loc-man-lib-sync#readme
license:             BSD3
license-file:        LICENSE
author:              Haruka Nakajima
maintainer:          haru2036@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LocMan.Model
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-template
                     , text
                     , loc-man-lib-ws
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/loc-man-lib-sync
