name:                loc-man-server-ws
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/loc-man-server-ws#readme
license:             BSD3
license-file:        LICENSE
author:              Haruka Nakajima
maintainer:          haru2036@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable loc-man-server-ws
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , transformers
                     , text
                     , aeson
                     , bytestring 
                     , classy-prelude
                     , monad-control
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , stm
                     , containers
                     , loc-man-lib-ws
                     , loc-man-lib-sync
