name:          loc-man-server
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          loc-man-server
    hs-source-dirs: .
    main-is:        Main.hs
    other-modules:  Handler.Users
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , apiary
                  , warp
                  , apiary-websockets
                  , apiary-persistent
                  , apiary-authenticate
                  , apiary-clientsession
                  , apiary-logger
                  , apiary-cookie
                  , text
                  , conduit
                  , stm-conduit
                  , stm-chans
                  , lens
                  , aeson
                  , stm-lifted
                  , stm
                  , conduit-combinators
                  , transformers
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , persistent-postgresql
                  , websockets
                  , bytestring
                  , containers
                  , classy-prelude
                  , async
                  , monad-control
                  , web-routing
                  , template-haskell
                  , filepath
                  , directory
                  , monad-logger
                  , loc-man-lib-sync
                  , loc-man-lib-ws
